# Alloy-ios

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  control
docs/: architecture.md  getting-started.md  memory.md  ui.md
src/: config.rs  lib.rs
src/memory/: hook.rs  image.rs  mod.rs  patch.rs  rw.rs  thread.rs
src/memory/ffi/: mach_exc.rs  mod.rs
src/memory/info/: image.rs  mod.rs  scan.rs  symbol.rs
src/memory/manipulation/: hook.rs  mod.rs  patch.rs  rw.rs
src/memory/platform/: breakpoint.rs  mod.rs  thread.rs
src/ui/: components.rs  menu.rs  mod.rs  pref.rs  theme.rs  window.rs
src/ui/assets/: icons.rs
src/ui/components/: mod.rs  toast.rs  widgets.rs
src/ui/menu/: handler.rs  items.rs  mod.rs  registry.rs  utils.rs  view.rs
src/ui/utils/: animations.rs  feedback.rs  wrappers.rs
src/utils/: logger.rs  macros.rs  mod.rs
