[package]
name = "rust_igmm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_igmm"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
ctor = "0.2"
mach2 = "0.4"
log = "0.4"
oslog = "0.1"
once_cell = "1.18"
parking_lot = "0.12"
thiserror = "1.0"
hex = "0.4"
jit-assembler = "0.3"
dispatch = "0.2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
